--- a/src/components/layout/styles/Header.css
+++ b/src/components/layout/styles/Header.css
@@ -24,7 +24,7 @@
     position: absolute;
     right: 40px;
     top:-20px;
-    background-color: rga(255,255,1);
+    background-color: white;
     border: 10px solid #0c0c0c;
     width: 90px;
     aspect-ratio: 1;
